# telecom

./: .gitignore  Dockerfile  Makefile  Manifest.toml  Project.toml  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  report.dvc  test.sql
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  mage_ai_Dockerfile  post-create-command.sh
.devcontainer/Dockerfile/: devcontainer
.dvc/: config
config/: main.yaml
data/: processed.dvc
data/processed/: .gitignore  201308.dvc  call_area_code.json.dvc  district.jsonl  latlon2addr.jsonl.dvc  meta_tower.csv.dvc  phone_brand.json  tower_locmeta.jsonl.dvc
docker/: Dockerfile_data
docker/runtime_script/: data_service.sh
dockerfile/: Dockerfile_data
dockerfile/data/: Dockerfile
dockerfile/data/output_parquet/: Dockerfile  output_parquet.sh
dockerfile/data/prepare_parquet/: Dockerfile  EDA.sh  jupyter.sh  mysql-connector-j_8.2.0-1debian12_all.deb  mysql.sh  prepare_parquet.sh
dockerfile/data/utils/: odbcinst.ini
dockerfile/utils/: ssh_config
manual/: ssh_tunel_bdsrc_sql.md
manual/data_info/: calls_info.md  complete_user_info.md  table_creation.qmd  tower_info.md  utils.sql
manual/odbc/: odbc.jl  ssh_tunel_odbc_configure.md
notebooks/: basic_check_rural.ipynb  inspect_calling_called_location.ipynb  inspect_cdrloc_201308.ipynb  who_is_client.ipynb  why_high_communication_distance.ipynb
notebooks/data_info/: more_user_information.ipynb  user_info_EDA.ipynb
notebooks/data_info/processed/: more_user_information.ipynb  output.ipynb  sample_user_sight.ipynb  tower_creation.ipynb
notebooks/data_info/raw/: calling_records.ipynb  complete_users_information.ipynb  example_users_information.ipynb  tower_information.ipynb
notebooks/data_info/study_previous_work/: study_radius_eccentricity_entropy_center-frequency.ipynb  study_tower_creation.ipynb
notebooks/odbc/: odbc_Julia.ipynb  ssh_tunel_odbc_config.ipynb
report/meetings/: 2024-03-18.ipynb  notebook.ipynb  notebook.ju.py
script/: EDA.sh  data_service.sh  import.sh  mysql.sh  output_parquet.sh  prepare_data.sh  prepare_parquet.sh  preprocess.py  tty.sh  upload_mysql.py
src/: cdr_schema.sql  import.sh  preprocess.py  user_info_schema.sql  utils.py
src/data/: clean_cdr.sql  clean_data_from_raw.sql  clear_cdr.sql  output_parquet.jl  prepare_parquet.jl  preprocess.py  target_node.sql
src/process/: eda.py  preprocess.py  utils.py
src/process/data_clean/: cdr.py
structure/: call_information.md  more_user_information.md  tower.md  tower_information.md  user_information.md
