[tool.poetry]
name = "telecom"
version = "0.1.0"
description = "telecom database analysis"
authors = ["Hsiu-Hsuan Yeh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
hydra-core = "^1.3.2"
poetry-kernel = "^0.1.3"
jupyterlab = "^4.0.7"

[tool.poetry.group.data.dependencies]
jupysql = "^0.9.0"
toml = "^0.10.2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
pymysql = "^1.1.0"
sqlalchemy = "<2.0.0"

[tool.poetry.group.model.dependencies]
pytorch-lightning = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
