[tool.poetry]
name = "telecom"
version = "0.1.0"
description = "telecom database analysis"
authors = ["Hsiu-Hsuan Yeh"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
python-dotenv = "^1.0.0"
hydra-core = "^1.3.2"
poetry-kernel = "^0.1.3"
numpy = "<=1.24"
nvidia-ml-py = "12.535.133"
geopy = "^2.4.0"
orjson = "^3.9.10"
loguru = "^0.7.2"

[tool.poetry.group.data.dependencies]
jupysql = "^0.9.0"
toml = "^0.10.2"
pandas = "<2.0.0"
seaborn = "^0.12.2"
pymysql = "^1.1.0"
sqlalchemy = "<2.0.0"
hvplot = "^0.9.0"

[tool.poetry.group.model.dependencies]


[tool.poetry.group.dev.dependencies]
ipywidgets = ">=7.6"
jupyter-dash = "^0.4.2"
jupyterlab-execute-time = "2.3.1"
jupyterlab = "3.6.6"
jupyterlab-lsp = "4.3.0"
python-lsp-server = {extras = ["all"], version = "^1.8.2"}
dask-labextension = "6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
